--- a/package.json
+++ b/package.json
@@ -28,76 +28,76 @@
     "test-coverage": "ng test -sr -cc -sm=false"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
     "@antv/data-set": "^0.8.3",
-    "@antv/g2": "^3.0.1",
-    "@antv/g2-plugin-slider": "^2.0.0",
-    "@delon/abc": "^1.0.0-beta.4",
-    "@delon/acl": "^1.0.0-beta.4",
-    "@delon/auth": "^1.0.0-beta.4",
-    "@delon/cache": "^1.0.0-beta.4",
-    "@delon/mock": "^1.0.0-beta.4",
-    "@delon/theme": "^1.0.0-beta.4",
-    "@ngx-translate/core": "^9.0.0",
-    "@ngx-translate/http-loader": "^2.0.0",
+    "@antv/g2": "^3.0.6",
+    "@antv/g2-plugin-slider": "^2.0.2",
+    "@delon/abc": "^1.0.0-beta.5",
+    "@delon/acl": "^1.0.0-beta.5",
+    "@delon/auth": "^1.0.0-beta.5",
+    "@delon/cache": "^1.0.0-beta.5",
+    "@delon/mock": "^1.0.0-beta.5",
+    "@delon/theme": "^1.0.0-beta.5",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
     "angular-baidu-maps": "^1.0.1",
     "angular-qq-maps": "^1.0.1",
-    "core-js": "^2.5.1",
-    "file-saver": "^1.3.3",
-    "ng-zorro-antd": "^0.7.0-beta.2",
-    "ngx-countdown": "^2.0.0",
-    "ngx-tinymce": "^1.0.1",
+    "core-js": "^2.5.5",
+    "file-saver": "^1.3.8",
+    "ng-zorro-antd": "^0.7.0-beta.4",
+    "ngx-countdown": "^2.1.0",
+    "ngx-tinymce": "^1.0.2",
     "ngx-ueditor": "^1.1.0",
-    "rxjs": "^5.5.5",
+    "rxjs": "^5.5.10",
     "screenfull": "^3.3.1",
     "simple-line-icons": "^2.4.1",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.2",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
     "@angularclass/hmr": "^2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
-    "@delon/cli": "^1.0.0-beta.4",
-    "@types/jasmine": "~2.6.0",
+    "@delon/cli": "^1.0.0-beta.5",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/jszip": "^3.1.2",
     "@types/mockjs": "^1.0.0",
-    "@types/node": "~6.0.60",
+    "@types/node": "^9.6.5",
     "@types/z-schema": "^3.16.32",
     "codecov": "^3.0.0",
-    "codelyzer": "~4.0.1",
-    "jasmine-core": "~2.8.0",
+    "codelyzer": "^4.2.1",
+    "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.0.0",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sauce-launcher": "^1.2.0",
-    "lint-staged": "^5.0.0",
+    "lint-staged": "^7.0.4",
     "mockjs": "^1.0.1-beta3",
     "npm-run-all": "^4.1.1",
-    "protractor": "~5.1.2",
-    "stylelint": "^8.2.0",
-    "stylelint-config-standard": "^17.0.0",
+    "protractor": "^5.3.1",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
     "ts-md5": "^1.2.4",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.6.0",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
-    "xlsx": "^0.11.16"
+    "xlsx": "^0.12.9"
   },
   "lint-staged": {
     "src/**/*.ts": "lint:ts",
