--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '2.1'
+version: '1.0'
 
 services:
   ng-alain:
-    image: ng-alain
+    image: sinoforce
     build: .
     environment:
       NODE_ENV: production
     ports:
-      - 80:80
+      - 3000:3000
