--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rxjs": "5.5.10",
     "screenfull": "3.3.1",
     "simple-line-icons": "2.4.1",
+    "viser-ng": "^2.2.8",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
