--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/core": "^0.4.9",
     "@angular-devkit/schematics": "^0.4.9",
     "@angular/animations": "5.2.10",
+    "@angular/cli": "^1.7.4",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/core": "5.2.10",
@@ -39,7 +40,7 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@angular/router": "5.2.10",
-    "@antv/data-set": "0.8.3",
+    "@antv/data-set": "^0.8.9",
     "@antv/g2": "3.0.6",
     "@antv/g2-plugin-slider": "2.0.2",
     "@delon/abc": "1.0.0-beta.5",
@@ -65,7 +66,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "5.2.10",
     "@angular/language-service": "5.2.10",
     "@angularclass/hmr": "2.1.3",
